--- a/index.ipynb
+++ b/index.ipynb
@@ -1058,7 +1058,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [for index in city_indices:\n",
-    "                      nam] \n",
+    "                      names_and_ranks[index] = ] \n",
     "# write a for loop that adds the properly formatted string to the names_and_ranks list"
    ]
   },
