--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,22 +1065,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'12. Iguazu Falls'"
+       "'2. Toronto'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names_and_ranks[0] # '1. Buenos Aires'"
+    "names_and_ranks[0] # '1. Buenos Aires'\n",
+    "names_and_ranks[1]"
    ]
   },
   {
