--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "f"
+    "for city in cities:\n",
+    "    city_population"
    ]
   },
   {
