Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1112,7 +1112,8 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_populations = cities[city]['Population']"
+    "    index = 0\n",
+    "    city_populations = cities[inde]['Population']"
    ]
   },
   {
