Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,9 +1100,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    index = 0\n",
-    "    city_populations = cities[index]['Population']\n",
-    "    index += 1"
+    "    city_populations.append("
    ]
   },
   {
