--- a/index.ipynb
+++ b/index.ipynb
@@ -2088,7 +2088,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for city in cities"
+    "for city in cities:\n",
+    "    "
    ]
   },
   {
