--- a/index.ipynb
+++ b/index.ipynb
@@ -2089,7 +2089,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_"
+    "    city_areas.append(cities['A'])"
    ]
   },
   {
